2006-03-16  Elijah Newren  <newren gmail com>

	Add debugging information for edge resistance

	* src/edge-resistance.c (cache_edges): print out the edges that
	are being cached if in verbose mode,
	(meta_window_edge_resistance_for_move,
	meta_window_edge_resistance_for_resize): if edge resistance kicked
	in then print out a message about it
	
	* src/util.c:
	* src/util.h:
	Add META_DEBUG_EDGE_RESISTANCE to MetaDebugTopic enum list

2006-03-13  Elijah Newren  <newren gmail com>

	* configure.in: post-release version bump to 2.14.2

2006-03-13  Elijah Newren  <newren gmail com>

	* configure.in:
	Remove the "This is the UNSTABLE branch" warning.  *sigh* I wished
	I would have remembered this before 2.14.0.

	* NEWS:
	2.14.1 release

2006-03-13  Elijah Newren  <newren gmail com>

	* configure.in:
	* README:
	* NEWS:
	2.14.0 release

2006-03-12  Thomas Thurman  <thomas@thurman.org.uk>

	* src/window-props.c (set_title_text): Mark a particular
	string for translation.  #334332.

2006-03-06  Ryan Lortie  <desrt@desrt.ca>

	* src/window.c (meta_window_free): Only unmaximise window before
	freeing if the window is actually maximised.  #333563.

2006-02-27  Elijah Newren  <newren gmail com>

	* NEWS:	2.13.144 release

2006-02-27  Elijah Newren  <newren gmail com>

	Patch from Thomas Thurman to prevent setting cycle_windows to
	keybindings that won't work.  #329676

	* src/prefs.c (update_binding):
	Make sure that bindings which require a modifier key are set to a
	keybinding with one or else that the binding is reverted.

	* src/ui.[ch] (meta_ui_accelerator_name):
	New function

2006-02-27  Elijah Newren  <newren gmail com>

	Patch from Thomas Thurman to work around buggy application
	grouping with transient windows.  #328211

	* src/group.c (meta_window_compute_group):
	Put transients in the same group with their parent, always.

	* src/window.c (update_transient_for):
	Update group too

2006-02-27  Elijah Newren  <newren gmail com>

	* configure.in: